@@ -1,7 +1,7 @@
 <f:layout name="defaultLayout" />
 
 <f:section name="bibos">
-<form id="filter-form"><f:translate key="bibliothek-filter" /> <input name="filter" id="filter" value="" maxlength="30" size="30" type="text"></form><br>
+	<form id="filter-form"><f:translate key="bibliothek-filter" /> <input name="filter" id="filter" value="" maxlength="30" size="30" type="text"></form><br>
 
 	<table id="daten">
 		<thead>
@@ -17,8 +17,8 @@
 					{bibo.sigel}
 				</td>
 				<td>
-					{bibo.titel}
-				</td>
+			<f:link.action action="single" controller="Bibliothek" arguments="{bibliothek:bibo}">{bibo.titel}</f:link.action>
+			</td>
 			</tr>
 
 		</f:for>
